--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,12 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dependencies.tokio]
+version = "1.14.0"
+features = ["rt-multi-thread"]
+
+[dependencies.remotia]
+git = "https://github.com/remotia/remotia"
+branch = "develop"
+default-features = false
+features = ["buffer_utils", "codecs", "loggers", "profilation_utils"]
