--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,11 @@ version = "1.14.0"
 features = ["rt-multi-thread"]
 
 [dependencies.remotia]
-git = "https://github.com/remotia/remotia"
-branch = "develop"
+# git = "https://github.com/remotia/remotia"
+# branch = "develop"
+path = "../remotia"
 default-features = false
 features = ["buffer_utils", "codecs", "loggers", "profilation_utils"]
+
+[dependencies]
+rand = "0.8.5"
