--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,8 @@ version = "1.14.0"
 features = ["rt-multi-thread"]
 
 [dependencies.remotia]
-# git = "https://github.com/remotia/remotia"
-# branch = "develop"
-path = "../remotia"
+git = "https://github.com/remotia/remotia"
+branch = "develop"
 default-features = false
 features = ["buffer_utils", "codecs", "loggers", "profilation_utils"]
 
